<resources>
    <string name="app_name">VS Webservices</string>
    <string name="button_text_rest_client">REST client</string>
    <string name="button_text_soap_client">SOAP client</string>
    <string name="button_text_rest_server">REST server</string>
    <string name="activity_label_rest_client">REST client</string>
    <string name="activity_label_soap_client">SOAP client</string>
    <string name="activity_label_rest_server">REST server</string>
    <string name="no_data_to_display">No Data to display</string>
    <string name="temperature_is">Temperature is:</string>
    <string name="degree_symbol">°C</string>
    <string name="make_text_request">Make a text request</string>
    <string name="make_raw_request">Make a raw request</string>
    <string name="make_json_request">Make a JSON request</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="no_info">No info</string>
    <string name="make_manual_soap_request">Make manual SOAP request</string>
    <string name="make_library_soap_request">Make library SOAP request</string>
    make_url_request
</resources>
