<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rest_server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a2.pascalo.vs_pascalo_webservices.REST_server">

    <Button
        android:text="@string/start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rest_server_start"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rest_server_stop"
        android:layout_below="@+id/rest_server_start"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/no_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rest_server_stop"
        android:layout_alignParentStart="true"
        android:id="@+id/rest_server_status_text" />
</RelativeLayout>
